@@ -9,6 +9,7 @@
   add io_fd_canwrite (like io_fd but assume the fd is writable)
   save a few syscalls here and there
   add awesome hack in isset.h (comex, Linus Torvalds)
+  add byte_equal_notimingattack
 
 0.28:
   add uint64 pack and unpack routines
